# django-survey

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  README.md  pyproject.toml  requirements.txt  settings.py  setup.cfg  tox.ini
.github/workflows/: ci.yml
survey/: forms.py
survey/exporter/tex/: question2tex_sankey.py  survey2tex.py
survey/locale/de/LC_MESSAGES/: django.po
survey/locale/es/LC_MESSAGES/: django.po
survey/locale/fr/LC_MESSAGES/: django.po
survey/locale/gr/LC_MESSAGES/: django.po
survey/locale/id/LC_MESSAGES/: django.po
survey/locale/ja/LC_MESSAGES/: django.po
survey/locale/nl/LC_MESSAGES/: django.po
survey/locale/pl/LC_MESSAGES/: django.po
survey/locale/pt/LC_MESSAGES/: django.po
survey/locale/ru/LC_MESSAGES/: django.po
survey/locale/tr/LC_MESSAGES/: django.po
survey/locale/zh/LC_MESSAGES/: django.po
survey/models/: answer.py  question.py
survey/tests/: base_test.py
survey/tests/views/: test_survey_category.py
survey/views/: survey_detail.py
